--- a/src/app/components/Hr/profile/profile.component.css
+++ b/src/app/components/Hr/profile/profile.component.css
@@ -15,6 +15,7 @@ body {
   }
 
   .card-header {
+    padding: 15px;
     background: linear-gradient(to right, #4158d0, #c850c0, #ffcc70);
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   }
@@ -40,7 +41,7 @@ body {
     background: linear-gradient(to right, #4158d0, #c850c0);
     border: none;
     padding: 10px 20px;
-    border-radius: 50px;
+    border-radius: 10px;
     font-weight: bold;
     letter-spacing: 1px;
     transition: all 0.3s ease-in-out;
