--- a/src/app/components/Hr/view-interviews/view-interviews.component.css
+++ b/src/app/components/Hr/view-interviews/view-interviews.component.css
@@ -1,4 +1,8 @@
 /* General Table Styling */
+.card{
+    max-width: 85%;
+    margin: 25px auto;
+}
 .table {
     border-collapse: collapse;
     width: 100%;
