--- a/src/app/pages/hr-dashboard/hr-dashboard.component.css
+++ b/src/app/pages/hr-dashboard/hr-dashboard.component.css
@@ -1,7 +1,7 @@
 /* General Body Style */
 body {
   margin: 0;
-  background-color: #00ADB5;
+  background-color: white;
   font-family: Arial, sans-serif;
 }
 
